# KNX-IOT-Virtual

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_unsecured.sh  knx_iot_pb_pi.c  knx_iot_sa_pi.c  knx_iot_virtual_dimming_actuator.c  knx_iot_virtual_dimming_actuator.h  knx_iot_virtual_gui_pb.cpp  knx_iot_virtual_gui_sa.cpp  knx_iot_virtual_pb.c  knx_iot_virtual_pb.cpp  knx_iot_virtual_pb.h  knx_iot_virtual_pb_pi.c  knx_iot_virtual_pb_pi.cpp  knx_iot_virtual_sa.c  knx_iot_virtual_sa.cpp  knx_iot_virtual_sa.h  knx_iot_virtual_sa_pi.c  pi_hat.py  restart_app.py
.github/workflows/: build-all-and-release.yml  cmake-linux.yml  cmake-windows.yml  gitlabsync.yml
MT/: Test_Project_KNXvirtualPushButton.knxproj  Test_Project_KNXvirtualSwitchingActuator.knxproj
config/: config_0.0.1.json  config_0.0.2.json  install_demo.bat  pb-install-config.sh  readme.md  sa-install-config.sh
images/: config-windows.puml  setup-windows.puml
